- implemented the function to log out - implemented the function to receive real-time notification with   SockJS - implemented the function to update response count when recived   notification of someone set response

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<!--[if lt IE 9]>
 			<script src="js/html5shiv.js"></script>
 		<![endif]-->
+
+		<!-- jquery.jgrowl -->
+		<link href="css/jquery.jgrowl.min.css" rel="stylesheet">
 	</head>
 
 	<body style="padding-top: 60px;">
@@ -260,7 +263,9 @@
 		<script src="js/bootstrap-modal.js"></script>
 		<script src="js/bootstrap-transition.js"></script>
 		<script src="js/jquery-tap.js"></script>
+		<script src="js/jquery.jgrowl.min.js"></script>
 		<script src="js/myutil.js"></script>
+		<script src="js/sockjs-0.3.4.js"></script>
 		<script src="js/atmos-web.js"></script>
 	</body>
 </html>
