--- a/index.html
+++ b/index.html
@@ -128,6 +128,22 @@
 			</div>
 		</div>
 
+		<div id="avatorChangerDialog" class="modal hide fade" role="dialog" tabindex="-1" aria-labelledby="avatorChangerDialogLabel" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h3 Id="avatorChangerDialogLabel">Are you sure to <i id="avator_changer_dialog_icon"></i> this message?</h3>
+			</div>
+			<div class="modal-body">
+			<form>
+				<input type="file" class="input-block-level" name="profileImage" id="avator_changer_profile_image" />
+			</form>
+			</div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+				<button class="btn btn-primary" id="avatorChangerDialogOK">OK</button>
+			</div>
+		</div>
+
 		<!-- navigation bar -->
         <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="navbar-inner">
@@ -147,7 +163,11 @@
                     </a>
                   </li>
 				  <li id="menuItemCurrentUser" style="display:none;">
-				  	<a href="#" id="logoutButton">Not Login</a>
+				  	<a href="#">Not Login</a>
+					<ul>
+						<li><a href="#" id="changeAvatorButton">Change Avator</a></li>
+						<li><a href="#" id="logoutButton">Log out</a></li>
+					</ul>
                   </li>
                 </ul>
               </div><!--/.nav -->
@@ -238,18 +258,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid" id="resultArea">
-			<div class="row">
-				<div class="span12">
-					<form method="POST" action="/atmos/user/set_avator">
-						<fieldset>
-							<label>プロフィール画像</label><input type="file" name="profileImage" />
-							<input type="submit" />
-						</fieldset>
-					</form>
-				</div>
-			</div>
-		</div>
 
 		<!-- Load JS here for greater good =============================-->
 		<script src="js/jquery-1.8.2.min.js"></script>
@@ -264,6 +272,7 @@
 		<script src="js/bootstrap-transition.js"></script>
 		<script src="js/jquery-tap.js"></script>
 		<script src="js/jquery.jgrowl.min.js"></script>
+		<script src="js/jquery.upload-1.0.2.min.js"></script>
 		<script src="js/myutil.js"></script>
 		<script src="js/sockjs-0.3.4.js"></script>
 		<script src="js/atmos-web.js"></script>
