--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 		<script src="js/jquery.upload-1.0.2.min.js"></script>
 		<script src="js/jquery.cookie.js"></script>
 
+		<!-- jquery textcomplete -->
+		<script src="js/jquery.textcomplete.min.js"></script>
+
 		<!-- sock.js (web socket) -->
 		<script src="js/sockjs-0.3.4.js"></script>
 
