added effect when new messsage comming, and someone respond message.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 		<!-- jGrowl -->
 		<link href="css/jquery.jgrowl.min.css" rel="stylesheet">
 
+		<!-- magic -->
+		<link href="css/magic.min.css" rel="stylesheet">
+
 		<!-- Atmosphere stylesheet -->
 		<link href="css/atmos.css" rel="stylesheet">
+		<link href="css/atmos-magic.css" rel="stylesheet">
 
 		<!-- Theme stylesheet -->
 		<link href="css/theme.css" rel="stylesheet">
@@ -121,7 +125,7 @@
 		<script type="text/template" src="templates/test.html" id="test_tmpl"></script>
 		-->
 		<script type="text/template" id="tmpl-timeline-item-wrapper">
-			<div class="timeline-item-wrapper">
+			<div class="timeline-item-wrapper new-item" style="display:none;">
 				<article class="timeline-item msg_{{timeline-item-message-id}}">
 					<header class="timeline-item-header">
 						<div class="timeline-item-timestamp">{{timeline-item-timestamp}}</div>
