simplify functions for starting service

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 						<li><a href="#" class="icon-login"><span>Login<span></a></li>
 -->
 						<li><a href="#" class="icon-send" id="menuItemSendMessage"><span>Send Request</span></a></li>
-						<li><a href="#" class="icon-private" id="menuItemSendPrivate"><span>Send Request</span></a></li>
 						<li><a href="#" class="icon-avator" id="menuItemChangeAvator"><span>Change Avator</span></a></li>
 						<li><a href="#" class="icon-password" id="menuItemChangePassword"><span>Change Password</span></a></li>
 						<li><a href="#" class="icon-logout" id="menuItemLogout"><span>Logout<span></a></li>
@@ -45,7 +44,7 @@
 				<div class="contents">
 					<div class="timeline timeline-row1">
 						<header class="timeline-header">
-							<span class="timeline-title">global timeline</span>
+							<span class="timeline-title">everyone's message</span>
 						</header>
 						<div class="timeline-items-wrapper">
 							<div class="timeline-items" id="tl_global_timeline">
@@ -54,46 +53,10 @@
 					</div> <!-- timeline -->
 					<div class="timeline timeline-row2">
 						<header class="timeline-header">
-							<span class="timeline-title">my timeline</span>
-						</header>
-						<div class="timeline-items-wrapper">
-							<div class="timeline-items" id="tl_my_timeline">
-							</div> <!-- timeline-items -->
-						</div> <!-- timeline-itmes-wrapper -->
-					</div> <!-- timeline -->
-					<div class="timeline timeline-row3">
-						<header class="timeline-header">
-							<span class="timeline-title">talk timeline</span>
+							<span class="timeline-title">messages to you</span>
 						</header>
 						<div class="timeline-items-wrapper">
 							<div class="timeline-items" id="tl_talk_timeline">
-							</div> <!-- timeline-items -->
-						</div> <!-- timeline-itmes-wrapper -->
-					</div> <!-- timeline -->
-					<div class="timeline timeline-row4">
-						<header class="timeline-header">
-							<span class="timeline-title">announce timeline</span>
-						</header>
-						<div class="timeline-items-wrapper">
-							<div class="timeline-items" id="tl_announce_timeline">
-							</div> <!-- timeline-items -->
-						</div> <!-- timeline-itmes-wrapper -->
-					</div> <!-- timeline -->
-					<div class="timeline timeline-row5">
-						<header class="timeline-header">
-							<span class="timeline-title">monolog timeline</span>
-						</header>
-						<div class="timeline-items-wrapper">
-							<div class="timeline-items" id="tl_monolog_timeline">
-							</div> <!-- timeline-items -->
-						</div> <!-- timeline-itmes-wrapper -->
-					</div> <!-- timeline -->
-					<div class="timeline timeline-row6">
-						<header class="timeline-header">
-							<span class="timeline-title">private timeline</span>
-						</header>
-						<div class="timeline-items-wrapper">
-							<div class="timeline-items" id="tl_private_timeline">
 							</div> <!-- timeline-items -->
 						</div> <!-- timeline-itmes-wrapper -->
 					</div> <!-- timeline -->
