--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
 				</article>
 			</div>
 		</script>
+		<script type="text/template" id="tmpl-timeline-read-more">
+			<div class="timeline-read-more new-item" style="display:none;">
+				<a href="#">read more</a>
+			</div>
+		</script>
 		<script type="text/template" id="tmpl-conversation">
 			<div class="conversation" id="{{conversation-id}}-root" style="display:none;">
 				<header class="conversation-header">
