changed tool tip message from 'Request' to 'Message'.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <!--
 						<li><a href="#" class="icon-login"><span>Login<span></a></li>
 -->
-						<li><a href="#" class="icon-send" id="menuItemSendMessage"><span>Send Request</span></a><div class="atmos-vmenu-text"><div>Send Request</div></div></li>
-						<li><a href="#" class="icon-private" id="menuItemSendPrivate"><span>Send Private Request</span></a><div class="atmos-vmenu-text"><div>Send Private Request</div></div></li>
+						<li><a href="#" class="icon-send" id="menuItemSendMessage"><span>Send Message</span></a><div class="atmos-vmenu-text"><div>Send Message</div></div></li>
+						<li><a href="#" class="icon-private" id="menuItemSendPrivate"><span>Send Private Message</span></a><div class="atmos-vmenu-text"><div>Send Private Message</div></div></li>
 						<li><a href="#" class="icon-avator" id="menuItemChangeAvator"><span>Change Avator</span></a><div class="atmos-vmenu-text"><div>Change Avator</div></div></li>
 						<li><a href="#" class="icon-password" id="menuItemChangePassword"><span>Change Password</span></a><div class="atmos-vmenu-text"><div>Change Password</div></div></li>
 						<li><a href="#" class="icon-logout" id="menuItemLogout"><span>Logout</span></a><div class="atmos-vmenu-text"><div>Logout</div></div></li>
