added the function to apply screen when message was responded and removed.

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 			</div>
 		</script>
 		<script type="text/template" id="tmpl-profile-dialog-timeline-item">
-			<article class="timeline-item new-item" style="display: none;">
+			<article class="timeline-item msg_{{timeline-item-message-id}} new-item" style="display: none;">
 				<header>
 					<div class="timestamp">{{timeline-item-timestamp}}</div>
 				</header>
