- enabled to cancel(remove) messages that are sent just before. - changed notification design.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<!-- simptip -->
 		<link href="css/simptip.css" rel="stylesheet">
 
-		<!-- jGrowl -->
-		<link href="css/jquery.jgrowl.min.css" rel="stylesheet">
+		<!-- Messenger -->
+		<link href="css/messenger.css" rel="stylesheet">
+		<link href="css/messenger-theme-flat.css" rel="stylesheet">
 
 		<!-- perfect-scrollbar -->
 		<link href="css/perfect-scrollbar-0.4.4.min.css" rel="stylesheet">
@@ -129,8 +130,9 @@
 		<!-- hogan.js (template engine) -->
 		<script src="js/hogan-2.0.0.min.js"></script>
 
-		<!-- jGrowl.js -->
-		<script src="js/jquery.jgrowl.min.js"></script>
+		<!-- messenger.js -->
+		<script src="js/messenger.min.js"></script>
+		<script src="js/messenger-theme-flat.js"></script>
 
 		<!-- templates -->
 		<!--
