Web Notification (Desktop Notification)

--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
 
 		<!-- atmospheres -->
 		<script src="js/callback.js"></script>
+		<script src="js/desktop-notification.js"></script>
 		<script src="js/myutil.js"></script>
 		<script src="js/atmos-search-condition.js"></script>
 		<script src="js/atmos-timeline.js"></script>
